<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bookingDetailsScreen.bookingDetailsScreenFragment.BookingDetailsScreenFragment">
<TextView
    android:visibility="gone"
    android:id="@+id/noRoomMessage"
    android:text="all Rooms Have been booked for this RoomType ..."
    android:textStyle="bold"
    android:textColor="@color/custom_orange"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/fragment_bookingDetails_toolbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    />


    <!--    profile toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_bookingDetails_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="25dp"
        app:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_booking_details_toolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/booking"
            android:textColor="@color/profile_text_dark"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/fragment_booking_details_back_arrow_viev"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_new_24" />

    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/toolbar_shadow"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/fragment_bookingDetails_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        local:layout_constraintBottom_toBottomOf="parent"
        local:layout_constraintTop_toBottomOf="@+id/divider_view"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/fragment_booking_details_bookingDetails_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/booking_details"
                android:textColor="@color/OffBlack"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bookingDetailsScreen_textView_Name"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:hint="Name"
        android:drawablePadding="8dp"
        android:textStyle="normal"
        android:background="@drawable/text_input_rectangle"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:elevation="4dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_booking_details_bookingDetails_TextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bookingDetailsScreen_textView_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Phone"
        android:inputType="phone"
        android:drawablePadding="8dp"
        android:background="@drawable/text_input_rectangle"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:elevation="4dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_textView_Name" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/bookingDetailsScreen_textView_Start_Date"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="Check In"
        android:focusable="false"
        android:drawablePadding="8dp"
        android:background="@drawable/text_input_rectangle"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:elevation="4dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_textView_PhoneNumber" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/bookingDetailsScreen_textView_End_Date"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:focusable="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="Check out"
        android:longClickable="false"
        android:drawablePadding="8dp"
        android:background="@drawable/text_input_rectangle"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:elevation="4dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_textView_Start_Date" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bookingDetailsScreen_textView_Age_Bracket"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="People"
        android:longClickable="false"
        android:drawablePadding="8dp"
        android:background="@drawable/text_input_rectangle"
        android:drawableStart="@drawable/ic_baseline_people_24"
        android:elevation="4dp"
        android:focusable="false"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_textView_End_Date" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookingDetailsScreen_RoomType"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:hint="Room Type"
                android:drawablePadding="8dp"
                android:textStyle="normal"
                android:focusable="false"
                android:background="@drawable/text_input_rectangle"
                android:drawableStart="@drawable/ic_baseline_bedroom_parent_24"
                android:elevation="4dp"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_textView_Age_Bracket" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/bookingDetailsScreen_textView_Room_type"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Rooms"
        android:focusable="false"
        android:longClickable="false"
        android:drawablePadding="8dp"
        android:background="@drawable/text_input_rectangle"
        android:drawableStart="@drawable/ic_baseline_bedroom_parent_24"
        android:elevation="4dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_RoomType" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_booking_bookNow_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/rectangle_button"
                android:text="@string/book_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.459"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookingDetailsScreen_textView_Room_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>